# microservices-with-fastapi

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/migrations/versions/: 11cca46aac01_add_categories_table.py
app/routes/: category_routes.py  deps.py
app/schemas/: base.py  category.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py
app/test/schemas/: test_category_schema.py
app/test/use_cases/: test_category_use_cases.py
app/use_cases/: category.py
