[tool.poetry]
name = "microservice-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Samuel Perroni <samuel_perroni@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.1"
alembic = "^1.13.1"
python-decouple = "^3.8"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
